# ffmpeg3.xdemo

./: build.gradle  ffmpeg_build.sh  settings.gradle
app/: build.gradle
app/src/androidTest/java/android/spport/myffmpegdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/android/spport/myffmpegdemo/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/android/spport/myffmpegdemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
